# Isotherm

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE
IsothermLibTest/ThreeParameters/: CMakeLists.txt
IsothermLibTest/ThreeParameters/TesteBrouersSotolongo/: BrouersSotolongo .mw  CMakeLists.txt  TesteBrouersSotolongo.cpp
IsothermLibTest/ThreeParameters/TesteBrunauerEmmettTeller/: BrunauerEmmettTeller.mw  CMakeLists.txt  TesteBrunauerEmmettTeller.cpp
IsothermLibTest/ThreeParameters/TesteFowlerGuggenheim/: CMakeLists.txt  FowlerGuggenheim.mw  TesteFowlerGuggenheim.cpp
IsothermLibTest/ThreeParameters/TesteFritzSchlunder/: CMakeLists.txt  FritzSchlunder.mw  TesteFritzSchlunder.cpp
IsothermLibTest/ThreeParameters/TesteHenderson/: CMakeLists.txt  TesteHenderson.cpp
IsothermLibTest/ThreeParameters/TesteHill/: CMakeLists.txt  Hill.mw  TesteHill.cpp
IsothermLibTest/ThreeParameters/TesteHillDeBoer/: CMakeLists.txt  HillDeboer.mw  HillDeboer_MAS.bak  TesteHillDeBoer.cpp
IsothermLibTest/ThreeParameters/TesteHollKrich/: CMakeLists.txt  HollKrich.mw  TesteHollKrich.cpp
IsothermLibTest/ThreeParameters/TesteJossens/: CMakeLists.txt  Jossens.mw  TesteJossens.cpp
IsothermLibTest/ThreeParameters/TesteKhan/: CMakeLists.txt  Khan.mw  TesteKhan.cpp
IsothermLibTest/ThreeParameters/TesteKiselev/: CMakeLists.txt  Kiselev.mw  TesteKiselev.cpp
IsothermLibTest/ThreeParameters/TesteKobleCorrigan/: CMakeLists.txt  KobleCorrigan.mw  TesteKobleCorrigan.cpp
IsothermLibTest/ThreeParameters/TesteLangmuirFreundlich/: CMakeLists.txt  LangmuirFreundlich.mw  TesteLangmuirFreundlich.cpp
IsothermLibTest/ThreeParameters/TesteLangmuirJovanovic/: CMakeLists.txt  LangmuirJovanovic.mw  TesteLangmuirJovanovic.cpp
IsothermLibTest/ThreeParameters/TesteMacMillanTeller/: CMakeLists.txt  MacMillanTeller.mw  TesteMacMillanTeller.cpp
IsothermLibTest/ThreeParameters/TesteRadkePrausnitsI/: CMakeLists.txt  RadkePrausnitsI.mw  TesteRadkePrausnitsI.cpp
IsothermLibTest/ThreeParameters/TesteRadkePrausnitsII/: CMakeLists.txt  RadkePrausnitsII.mw  TesteRadkePrausnitsII.cpp
IsothermLibTest/ThreeParameters/TesteRadkePrausnitsIII/: CMakeLists.txt  TesteRadkePrausnitsIII.cpp
IsothermLibTest/ThreeParameters/TesteRedlichPeterson/: CMakeLists.txt  RedlichPeterson.mw  TesteRedlichPeterson.cpp
IsothermLibTest/ThreeParameters/TesteSips/: CMakeLists.txt  Sips.mw  Sips_MAS.bak  TesteSips.cpp
IsothermLibTest/ThreeParameters/TesteToth/: CMakeLists.txt  TesteToth.cpp  Toth.mw
IsothermLibTest/ThreeParameters/TesteUnilan/: CMakeLists.txt  TesteUnilan.cpp  Unilan.mw
IsothermLibTest/ThreeParameters/TesteValenzuelaMyers/: CMakeLists.txt  TesteValenzuelaMyers.cpp  ValenzuelaMyers.mw
IsothermLibTest/ThreeParameters/TesteViethSladek/: CMakeLists.txt  TesteViethSladek.cpp  ViethSladek.mw
Testes/: CMakeLists.txt
Testes/ThreeParameters/: CMakeLists.txt
Testes/ThreeParameters/TesteBrouersSotolongo/: CMakeLists.txt  TesteBrouersSotolongo.cpp
Testes/ThreeParameters/TesteBrunauerEmmettTeller/: CMakeLists.txt  TesteBrunauerEmmettTeller.cpp
Testes/ThreeParameters/TesteFowlerGuggenheim/: CMakeLists.txt  TesteFowlerGuggenheim.cpp
Testes/ThreeParameters/TesteFritzSchlunder/: CMakeLists.txt
Testes/ThreeParameters/TesteHenderson/: CMakeLists.txt  TesteHenderson.cpp
Testes/ThreeParameters/TesteHill/: CMakeLists.txt
Testes/ThreeParameters/TesteHillDeBoer/: CMakeLists.txt  TesteHillDeBoer.cpp
Testes/ThreeParameters/TesteHollKrich/: CMakeLists.txt  TesteHollKrich.cpp
(+1884 files in other folders)
