add_subdirectory(TesteBrouersSotolongo)
add_subdirectory(TesteBrunauerEmmettTeller)
add_subdirectory(TesteFowlerGuggenheim)
add_subdirectory(TesteFritzSchlunder)
add_subdirectory(TesteHenderson)
add_subdirectory(TesteHill)
add_subdirectory(TesteHillDeboer)
add_subdirectory(TesteHollKrich)
add_subdirectory(TesteJossens)
add_subdirectory(TesteKhan)
add_subdirectory(TesteKiselev)
#add_subdirectory(TesteKobleCorrigan)
#add_subdirectory(TesteLangmuirFreundlich)
#add_subdirectory(TesteMacMillanTeller)
#add_subdirectory(TesteRadkePrausnitsI)
#add_subdirectory(TesteRadkePrausnitsII)
#add_subdirectory(TesteRadkePrausnitsIII)
#add_subdirectory(TesteRedlichPeterson)
#add_subdirectory(TesteSips)
#add_subdirectory(TesteToth)
#add_subdirectory(TesteUnilan)
#add_subdirectory(TesteValenzuelaMyers)
#add_subdirectory(TesteViethSladek)










 










