add_subdirectory(TesteBrouersSotolongo)
add_subdirectory(TesteBrunauerEmmettTeller)
add_subdirectory(TesteFowlerGuggenheim)
add_subdirectory(TesteFritzSchlunder)
add_subdirectory(TesteHenderson)
add_subdirectory(TesteHill)
add_subdirectory(TesteHillDeboer)
add_subdirectory(TesteHollKrich)
add_subdirectory(TesteJossens)
add_subdirectory(TesteKhan)
add_subdirectory(TesteKiselev)
add_subdirectory(TesteKobleCorrigan)
add_subdirectory(TesteLangmuirFreundlich)












